<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.AboutFragment">

    <ImageView
        style="@style/StyleToolbarImageView"
        android:contentDescription="@null" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoRepositoryGitHun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/repository" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardUpdateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/TextViewAboutScreen"
                android:drawablePadding="10dp"
                android:text="@string/update_app"
                app:drawableStartCompat="@drawable/ic_download" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardShareApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/TextViewAboutScreen"
                android:drawablePadding="10dp"
                android:text="@string/share_app"
                app:drawableStartCompat="@drawable/ic_share" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLicenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                style="@style/TextViewAboutScreen"
                android:drawablePadding="10dp"
                android:text="@string/licenses"
                app:drawableStartCompat="@drawable/ic_library" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>